--- a/WhyRemitApp/WhyRemitApp.iOS/WhyRemitApp.iOS.csproj
+++ b/WhyRemitApp/WhyRemitApp.iOS/WhyRemitApp.iOS.csproj
@@ -1051,4 +1051,31 @@
   <ItemGroup>
     <BundleResource Include="Resources\globe%403x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\currency1%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\setting1%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\user1%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\user1%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\currency1%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\no%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\currency1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\setting1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\user1.png" />
+  </ItemGroup>
 </Project>
