--- a/WhyRemitApp/WhyRemitApp.Android/WhyRemitApp.Android.csproj
+++ b/WhyRemitApp/WhyRemitApp.Android/WhyRemitApp.Android.csproj
@@ -118,6 +118,9 @@
     <PackageReference Include="Xamarin.Forms.InputKit">
       <Version>3.0.15</Version>
     </PackageReference>
+    <PackageReference Include="XamEffects">
+      <Version>1.6.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dependencies\MediaService.cs" />
