--- a/WhyRemitApp/WhyRemitApp/WhyRemitApp.csproj
+++ b/WhyRemitApp/WhyRemitApp/WhyRemitApp.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.15" />
+    <PackageReference Include="XamEffects" Version="1.6.3" />
   </ItemGroup>
 
   <ItemGroup>
