--- a/WhyRemitApp/WhyRemitApp.iOS/WhyRemitApp.iOS.csproj
+++ b/WhyRemitApp/WhyRemitApp.iOS/WhyRemitApp.iOS.csproj
@@ -1153,4 +1153,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\splash%402x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\settinggray%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\settinggray.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\settinggray%402x.png" />
+  </ItemGroup>
 </Project>
